kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lego-sandbox-service
  labels:
    app: lego-sandbox-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lego-sandbox-service
  template:
    metadata:
      name: lego-sandbox-service
      labels:
        app: lego-sandbox-service   # selector label (required)
        app.kubernetes.io/name: lego-sandbox-service
        app.kubernetes.io/instance: sandbox
        app.kubernetes.io/version: "1.0.0"
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: lego-platform
    spec:
      containers:
        - name: lego-sandbox-service
          image: quay.io/tvattima/lego-sandbox-service
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP

          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 5
            failureThreshold: 60
            timeoutSeconds: 5

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 6
            timeoutSeconds: 5

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10

          volumeMounts:
            - name: services-sandbox-external-secret
              mountPath: /etc/.credentials
              readOnly: true
      volumes:
        - name: services-sandbox-external-secret
          secret:
            secretName: services-sandbox-external-secret
      restartPolicy: Always
