kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lego-sandbox-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/port: "8080"
    prometheus.io/scheme: "http"
  labels:
    app.kubernetes.io/name: lego-sandbox-service
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: lego-platform
spec:
  type: ClusterIP
  selector:
    app: lego-sandbox-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
