kubernetes/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lego-sandbox-service
  annotations:
    kubernetes.io/ingress.class: traefik-external
  labels:
    app.kubernetes.io/name: lego-sandbox-service
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: lego-platform
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lego-sandbox-service.sandbox.internal.legohunter.io`)
      kind: Rule
      services:
        - name: lego-sandbox-service
          port: 8080
      middlewares:
        - name: default-headers
  tls:
    secretName: sandbox-internal-legohunter-io-tls
